objects/GEMS_Shared_Accums__c.object
<CustomObject>
    <description>This object signifies Shared Accums for Account submission case.</description>
    <fields>
        <fullName>Accum_Period__c</fullName>
        <label>Accums Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Benefit Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accums_Feeding_feaking__c</fullName>
        <label>Accums Feeding/feaking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Network Updates/Feeds Out of Network</fullName>
                </value>
                <value>
                    <fullName>Out of Network Updates/Feeds In Network</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accums_Shared_With__c</fullName>
        <label>Accums Share With</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacy Only</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Only</fullName>
                </value>
                <value>
                    <fullName>Both Pharmacy and Behavioral Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregate_or_Embedded_Deductible__c</fullName>
        <label>Aggregate or Embedded Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate (family based accums)</fullName>
                </value>
                <value>
                    <fullName>Embedded (individually based accums)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregate_or_Embedded_Out_of_Pocket__c</fullName>
        <label>Aggregate or Embedded Out of Pocket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate (family based accums)</fullName>
                </value>
                <value>
                    <fullName>Embedded (individually based accums)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Limit $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_BAs__c</fullName>
        <label>Applicable BAs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BA_Product_Name__c</fullName>
        <formula>Benefit_Agreement__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BA Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>only shows BA’s that are associated with Account structure case for this account submission case</description>
        <label>Benefit Agreement</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>GEMS_Benefit_Agreement__c.AccountStructureCase__r.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.GEMS_Case__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GEMS_Benefit_Agreement__c</referenceTo>
        <relationshipName>GEMS_Shared_Accums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <formula>IF( ISPICKVAL(Accums_Shared_With__c, &apos;Both Pharmacy and Behavioral Health&apos;) , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deductible_Converted__c</fullName>
        <formula>IF( Deductible__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deductible Converted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible_Middle_Tier_s_if_Applicable__c</fullName>
        <label>Deductible Middle Tier (s) if Applicable</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Copay_apply_to_Out_of_Pocket__c</fullName>
        <label>Does Copay apply to Out of Pocket?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Deductible_apply_to_Out_of_Pocket__c</fullName>
        <label>Does Deductible apply to Out of Pocket?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Deductible_Amount__c</fullName>
        <label>Family Deductible Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Out_of_Pocket_Amount__c</fullName>
        <label>Family Out of Pocket Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GEMS_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Shared Accums</relationshipLabel>
        <relationshipName>GEMS_Shared_Accums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HCSC_responsible_for_Vendor_Eligibility__c</fullName>
        <label>HCSC responsible for Vendor_Eligibility?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Network_OOP_Feeds_Out_of_Network__c</fullName>
        <description>In Network OOP Feeds Out of Network</description>
        <label>In Network OOP Feeds Out of Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Ntk_Ded_Feeds_Out_Of_Ntk__c</fullName>
        <description>In Network Deductible Feeds Out of Network</description>
        <label>In Network Deductible Feeds Out of Ntwk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Deductible_Amount__c</fullName>
        <label>Individual Deductible Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Out_of_Pocket_Amount__c</fullName>
        <label>Individual Out of Pocket Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Innetwork_DED_feeds_Out_of_Network__c</fullName>
        <formula>IF( ISPICKVAL(Accums_Feeding_feaking__c, &apos;In Network Updates/Feeds Out of Network&apos;) , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Innetwork DED feeds Out of Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Maximum_Converted__c</fullName>
        <formula>IF( Lifetime_Maximum__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Maximum Converted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Maximum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lifetime Maximum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Accum_Tiers__c</fullName>
        <label>Number of Accum Tiers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Tier = One Rate Applies to all Family Structures</fullName>
                </value>
                <value>
                    <fullName>Two Tier = EE, Family</fullName>
                </value>
                <value>
                    <fullName>Three Tier = EE, EE + One, Family</fullName>
                </value>
                <value>
                    <fullName>Four Tier = EE,  EE + Sps, EE + Child(ren), Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Network_DED_feeds_Innetwork__c</fullName>
        <formula>IF( ISPICKVAL(Accums_Feeding_feaking__c, &apos;Out of Network Updates/Feeds In Network&apos;) , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Network DED feeds Innetwork</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Network_Deductible_Feeds_In_Ntk__c</fullName>
        <description>Out of Network Deductible Feeds In Network</description>
        <label>Out of Network Deductible Feeds In Ntk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Network_OOP_Feeds_In_Network__c</fullName>
        <description>Out of Network OOP Feeds In Network</description>
        <label>Out of Network OOP Feeds In Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Converted__c</fullName>
        <formula>IF( Out_of_Pocket__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Pocket Converted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Middle_Tier_if_Applicable__c</fullName>
        <label>Out of Pocket Middle Tier if Applicable</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Pocket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Pocket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Text(Benefit_Agreement__r.Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Accum_ID__c</fullName>
        <label>Shared Accum ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Accum_with_Vendor_Using__c</fullName>
        <label>Shared Accum with Vendor Using</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>Employee ID (Must have approval)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_Accums_Effective_Date__c</fullName>
        <label>Shared Accums Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shared_Accums_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Accums Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Shared_Accums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GEMS Shared Accums</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>GEMS_Shared_Accums Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Shared Accums</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>